# Metis

./: .dockerignore  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  LICENSING.md  README.md  docker-compose.yml  glama.json  pytest.ini  server.json
.claude/: settings.json
.claude/hooks/: post-tool-use.mjs  pre-compact.mjs  pre-tool-use.mjs  stop.mjs
.gemini/: GEMINI.md
.github/workflows/: build-installer.yml  docker-publish.yml  tests.yml
agents/background-maker/: contract.md  skill.md  system-prompt.md
agents/biostatistician/: contract.md  skill.md  system-prompt.md
agents/builder/: skill.md  system-prompt.md
agents/career-coach/: skill.md  system-prompt.md
agents/content-harvester/: contract.md  skill.md  system-prompt.md
agents/course-builder/: contract.md  skill.md  system-prompt.md
agents/critic/: contract.md  skill.md  system-prompt.md
agents/cybersecurity/: contract.md  skill.md  system-prompt.md
agents/dashboard-engineer/: README.md  contract.md  skill.md  system-prompt.md  workflows.md
agents/data-analyst/: contract.md  skill.md  system-prompt.md
agents/data-guardian/: skill.md  system-prompt.md
agents/design-auditor/: contract.md  skill.md  system-prompt.md
agents/dhis2-expert/: contract.md  skill.md  system-prompt.md
agents/edu-expert/: contract.md  skill.md
agents/epidemiologist/: contract.md  skill.md  system-prompt.md
agents/frontend-designer-builder/: skill.md  system-prompt.md
agents/hr-talent/: contract.md  skill.md  system-prompt.md
agents/learning-architect/: contract.md  skill.md  system-prompt.md
agents/learning-coach/: README.md  contract.md  skill.md  system-prompt.md
agents/librarian/: README.md  contract.md  output-spec.md  skill.md  sources.md  system-prompt.md
agents/meeting-memory/: skill.md  system-prompt.md  transcription-stack.md
agents/memory-curator/: contract.md  skill.md  system-prompt.md
agents/methods-coach/: README.md  skill.md  system-prompt.md
agents/metis/: dashboard-spec.md  security-policy.md  skill.md  system-prompt.md
agents/news-aggregator/: skill.md  system-prompt.md
agents/news-radar/: contract.md  skill.md  sources.md  system-prompt.md
agents/phd-architect/: hat-clustering-context.md  output-spec.md  skill.md  system-prompt.md
agents/presentation-maker/: contract.md  skill.md  (+3 more)
archive/: metis-review-and-redesign-strategy.md
docs/: DOMAIN-PACKS.md  INDEXING-GUIDE.md  RAG-ARCHITECTURE.md  configure-and-fix-metis.md
journal/: 2026-04-25_phase9_plan.md  2026-05-14_handoff.md  session-handoff-2026-04-07.md
metis/: CLAUDE.md  CONTRIBUTING.md  PERSONALIZE.md  README.md
metis/system/mcp-server/: README.md  pyproject-DL29GY3.toml  pyproject.toml  run_mcp_server.sh  setup-mcp.sh  setup.sh
metis/system/mcp-server/src/metis_mcp/: __init__.py  cache_helpers.py  config.py  db.py  embeddings.py  server-239GX64-2.py  server-239GX64.py  server.py  subset_loader.py  webhook.py
metis/system/mcp-server/src/metis_mcp/tools/: agents-239GX64-2.py  agents.py  brainstorm.py  config_tools.py  content_scan.py  data_tools.py  files.py  fulltext_index.py  guardrails.py  ideas.py  images.py  improvement.py  intelligence.py  knowledge_db.py  knowledge_graph.py  literature.py  literature_monitor.py  observability.py  paperqa_search.py  pipeline.py  projects.py  ref_miner.py  reviews.py  safety.py  self_improvement-239GX64.py  self_improvement.py  session_memory.py  thinking_profile.py  transcription-239GX64.py  transcription.py  user_profile.py  vector_memory.py  zotero.py
metis/system/mcp-server/src/metis_mcp_server.egg-info/: SOURCES.txt  requires.txt  top_level.txt
monia-second-brain/: CLAUDE.md  README.md  Thesis_Post-elimination and its building blocks.docx
monia-second-brain/08_system/mcp-server/: README.md  pyproject.toml
monia-second-brain/08_system/mcp-server/src/metis_mcp/: config.py  server.py
monia-second-brain/08_system/mcp-server/src/metis_mcp/tools/: agents.py  literature.py  notes.py  phd.py  projects.py  reviews.py  tasks.py
system/: .env.example  create_shortcut.ps1  launch-metis-silent.vbs  metis-autotest.py
system/mcp-server/: README.md  index_missing.py  pyproject.toml  requirements.txt  setup-mcp.sh
system/mcp-server/src/metis_mcp/: _consolidate_session.py  app_instance.py  cache_helpers.py  config.py  db.py  embeddings.py  local_overrides.py  migrations.py  models.py  server.py
system/mcp-server/src/metis_mcp/tools/: agents.py  anonymization.py  backup.py  brainstorm.py  code_repository.py  config_tools.py  content_scan.py  course_builder.py  data_automation.py  data_tools.py  dhis2.py  discovery.py  doctor.py  files.py  fulltext_index.py  guardrails.py  handoff.py  ideas.py  images.py  improvement.py  intelligence.py  knowledge_db.py  knowledge_graph.py  library.py  literature.py  literature_monitor.py  meetings.py  memory.py  memory_curator.py  memory_gateway.py  notes.py  observation.py  paperqa_search.py  pipeline.py  project_tracker.py  projects.py  prompts.py  ref_miner.py  relevance.py  research.py  (+12 more)
tests/: conftest.py  persona_linter.py  rag-pipeline-test.md  test_anthropic_import.py  test_rag_grounding.py
tools/: backup-canonical.py  build-base-shell.sh  export_knowledge_graph.py  install-hooks.sh  metis-update.sh  reinstall-mcp.sh  test-mcp.sh
(+1295 files in other folders)
