[project]
name = "metis-mcp-server"
version = "1.0.0"
description = "A research companion for Claude that keeps your data on your machine: your library, notes and memory never leave your computer; answers are cited from your own indexed library; 30+ specialist skills; automatic cross-pollination across papers, meetings, ideas, notes and journal; and a weekly self-review that drafts improvements for your approval. Reasoning runs on the Claude API."
requires-python = ">=3.10,<3.14"
dependencies = [
    "mcp>=1.27.0",
    "pyyaml>=6.0",
    "requests>=2.28",
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "python-multipart>=0.0.9",
    "httpx>=0.28.0",
    # Phase 5 — vector memory (fastembed is optional — see [embedding] extra)
    "sqlite-vec>=0.1.9",
    "onnxruntime>=1.20",
    "tokenizers>=0.20",
    # Phase 6 — encryption
    "cryptography>=42.0",
    # Phase 7 / data analyst
    "pandas>=2.0",
    "openpyxl>=3.1",
    "pyreadstat>=1.2",
    # Phase L — PDF knowledge indexing. PyMuPDF is the PRIMARY extractor (robust,
    # per-page, rescues image-heavy PDFs); pdfminer-six is the fallback. Required
    # for the knowledge layer to index PDFs at all.
    "pymupdf>=1.24",
    "pdfminer-six>=20240706",
    # Phase 8.8 — content scan
    "feedparser>=6.0",
    # Phase 10 — Zotero/library connector
    "pyzotero>=1.5",
    "scikit-learn>=1.4",
    # Phase 12 — Claude API access for morning brief, LLM fact extraction,
    # and any agent that talks to Anthropic directly. Pinned so fresh installs
    # never silently lose this capability.
    "anthropic>=0.40",
    # Optional integrations (comment out if not needed)
    "google-genai>=1.0",
    "twilio>=9.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23"]
# Neural embedding — REQUIRED for all semantic search, RAG, and the knowledge
# layer (search_pdf_knowledge, vector memory). Pulls ~200 MB of ONNX models (no
# GPU). setup-mcp.sh installs this by default; without it, semantic search is off.
embedding = ["fastembed>=0.8.0"]
# PaperQA2 — ask_library / extract_structured (full-text Q&A over the PDF library).
# Heavier; ask_library degrades gracefully without it.
library = ["paper-qa>=5.0"]
# Voice capture — faster-whisper for local transcription (no GPU needed).
# resemblyzer removed: it requires PyTorch GPU and is not used in any tool.
voice = [
    "faster-whisper>=1.0",
    "sounddevice>=0.4",
    "numpy>=1.24",
    "scipy>=1.10",
    "soundfile>=0.12",
]

[project.scripts]
metis-mcp = "metis_mcp.server:run"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
