[project]
name = "metis-mcp-server"
version = "0.1.0"
description = "MCP server for the Metis research PKM"
requires-python = ">=3.10"
dependencies = ["mcp>=1.0.0"]

[project.scripts]
metis-mcp = "metis_mcp.server:run"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"
